<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Editor</string>
    <string name="action_settings">Settings</string>
    <string name="text">测试文字，测试文字！</string>
    <string name="color">颜色</string>
    <string name="red">红色</string>
    <string name="green">绿色</string>
    <string name="blue">蓝色</string>
    <string name="size">大小</string>
    <string name="bigger">增大</string>
    <string name="smaller">缩小</string>
    <string name="title_activity_size">SizeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_size_listener">SizeListener</string>
     <string name="italic">加粗</string>
      <string name="bold">倾斜</string>
       <string name="moren">默认</string>
       <string name="Typeface">样式</string>

</resources>