<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/testText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >
    </LinearLayout>

    <Button
        android:id="@+id/blue"
        style="@style/btn03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/green"
        android:layout_toRightOf="@+id/green"
        android:text="@string/blue"
        android:textColor="#0000ff" />

    <Button
        android:id="@+id/green"
        style="@style/btn02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/red"
        android:layout_toRightOf="@+id/red"
        android:text="@string/green"
        android:textColor="#008000" />

    <Button
        android:id="@+id/red"
        style="@style/btn01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bigger"
        android:layout_alignLeft="@+id/bigger"
        android:layout_marginBottom="60dp"
        android:text="@string/red"
        android:textColor="#ff0000" />

    <Button
        android:id="@+id/bigger"
        style="@style/btn01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/smaller"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/bigger"
         android:textSize="20sp"
        android:textColor="#ff0000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/green"
        android:layout_alignBottom="@+id/green"
        android:layout_toRightOf="@+id/linearLayout1"
        android:text="@string/color" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/linearLayout1"
        android:text="@string/size" />
    <Button
        android:id="@+id/smaller"
        style="@style/btn02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/smaller"
        android:textColor="#008000" />

    <Button
        android:id="@+id/italic"
        style="@style/btn03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bold"
        android:layout_toLeftOf="@+id/bold"
        android:text="@string/italic"
        android:textColor="#0000ff" />

    <Button
        android:id="@+id/moren"
        style="@style/btn01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/blue"
        android:layout_marginBottom="81dp"
        android:text="@string/moren"
        android:textColor="#ff0000" />

    <Button
        android:id="@+id/bold"
        style="@style/btn02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/moren"
        android:layout_toLeftOf="@+id/moren"
        android:text="@string/bold"
        android:textColor="#008000" />

    <TextView
        android:id="@+id/Typeface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bold"
        android:layout_alignBottom="@+id/bold"
        android:layout_toRightOf="@+id/linearLayout1"
        android:text="@string/Typeface" />

</RelativeLayout>